# AI-tasks-service

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  client.py  main.py  pyproject.toml  server.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  test.py
ai_tasks/: q_and_a.py
app/: main.py
app/ai/models/: base_model.py
app/ai/tasks/: base_task.py  dashboard_design_task.py
client/: main.py
envoy/: Dockerfile  entrypoint.sh  envoy.local.yaml  envoy.template.yaml  envoy.yaml
old/: .gitignore
old/app/: main.py
old/app/ai/models/: google_model.py
old/tasks/: tool_test.py
outputs/: transcription.md
protobufs/: ai_service.proto  service.proto
recommendations/: recommendations_pb2_grpc.py
server/: logging_interceptor.py  main.py
server/agents/: __init__.py  chat.py
server/ai_core/: agent_factory.py  agent_tasks.py
server/ai_tasks/: agent_factory.py  q_and_a.py
tasks/: dashboard_designer.py  transcribe_image.py
