[project]
name = "ai-tasks-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "grpcio>=1.76.0",
    "grpcio-health-checking>=1.76.0",
    "grpcio-tools>=1.76.0",
    "jinja2>=3.1.6",
    "logfire>=4.16.0",
    "pydantic-ai>=1.29.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
]
